fix: prevent input label overlap and limit numbers to 6 decimal places

--- a/src/app/home/components/coin-detail/buy-sell/buy-sell.component.scss
+++ b/src/app/home/components/coin-detail/buy-sell/buy-sell.component.scss
@@ -52,8 +52,6 @@
     align-items: center;
     justify-content: flex-start;
 
-    width: 50%;
-
     margin: 0 auto;
 
     .prefix {
